# oura_bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
oura_bot/: auth.py  bot.py  client.py  consts.py  dtos.py  logger.py  main.py  models.py  provider.py  repository.py  schedule.py  settings.py  tasks.py  urls.py  utils.py
tests/: conftest.py  test_auth.py  test_client.py  test_repository.py  test_utils.py
tests/fixtures/: sleep_data.json
